--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "support": {
         "email": "hawkmedia24@gmail.com"
     },
+    "license": "GPL-3.0",
     "authors": [
         {
             "name": "Reverze",
